<InputWithTags/> - fix spacing of the InputSuffix

--- a/src/MultiSelect/InputWithTags.scss
+++ b/src/MultiSelect/InputWithTags.scss
@@ -32,8 +32,7 @@
   position: absolute;
   top: 0;
   right: 0;
-  padding: 8px;
-  height: 36px;
+  height: 34px;
   box-sizing: border-box;
 }
 
